--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,9 @@ hr {
   background-color:  #1dd3bd;
   padding-top: 100px;
   position: relative;
+  background-image: url(https://images.pexels.com/photos/248515/pexels-photo-248515.png?cs=srgb&dl=pexels-pixabay-248515.jpg&fm=jpg);
+  padding-bottom: 10%;
+  margin-top: 1px;
   
 
 }
