--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ hr {
   background-color:  #1dd3bd;
   padding-top: 100px;
   position: relative;
-  background-image: url("https://images.pexels.com/photos/248515/pexels-photo-248515.png?cs=srgb&dl=pexels-pixabay-248515.jpg&fm=jpg");
+  background-image: url(https://images.pexels.com/photos/248515/pexels-photo-248515.png?cs=srgb&dl=pexels-pixabay-248515.jpg&fm=jpg);
   padding-bottom: 10%;
   margin-top: 1px;
   
@@ -158,3 +158,14 @@ hr {
   padding-left: 3%; 
   
 }
+
+#line {
+
+  border-style: dashed;
+  border-color: black;
+  border-width: 1px 0 0 0;
+  margin: 10px auto;
+}
+
+
+
