--- a/styles.css
+++ b/styles.css
@@ -15,11 +15,13 @@ p {
     line-height: 2;
 }
 h2{
-  font-family: 'PT Serif', serif;
-  color: #00909e;
+  font-family: 'Merriweather', serif;
+  color: #F88017;
   font-size: 1.5rem;
   font-weight: normal;
   padding-bottom: 10px;
+     /*   #00909e; */
+     /* 'PT Serif', serif; */
 }
 h3 {
   color: red;
@@ -34,14 +36,17 @@ hr {
 /****classes******/
 
 .toppest {
-  background-color:  #1dd3bd;
+  /* background-color:  #1dd3bd; */
   padding-top: 100px;
   position: relative;
-  background-image: url(https://images.pexels.com/photos/248515/pexels-photo-248515.png?cs=srgb&dl=pexels-pixabay-248515.jpg&fm=jpg);
+  background-image: url(https://images.pexels.com/photos/1005644/pexels-photo-1005644.jpeg?cs=srgb&dl=pexels-oleg-magni-1005644.jpg&fm=jpg);
   padding-bottom: 10%;
   margin-top: 1px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 
-
+  /* https://images.pexels.com/photos/248515/pexels-photo-248515.png?cs=srgb&dl=pexels-pixabay-248515.jpg&fm=jpg */
 }
 .middle-container {
   margin: 60px 0 60px 0;
@@ -114,6 +119,7 @@ hr {
 }
 .contact-me {
   padding-bottom: 20px;
+  margin-top: 80px;
 }
 .name {
   color: #EAF6F6;
@@ -150,6 +156,18 @@ hr {
   text-decoration: none;
 }
 
+
+
+.crick-skill {
+
+    float: left;
+    margin-right: 30px;
+    width: 35%;
+
+}
+
+
+
 #resume {
   margin: 0;
   text-align: left;
@@ -174,3 +192,32 @@ hr {
   position: relative;
 
 }
+
+
+
+#last-container {
+  margin-top: 2%;
+  margin-left: 20%;
+  margin-right: 20%;
+  text-align: center;
+  background-color: white;
+
+}
+
+
+.testimonials-image {
+  width: 50%;
+  margin: 20px 20PX 20px 20px;
+}
+ .image {
+   width: 59.3%;
+   margin: 20px 20PX 20px 20px;
+   height: 60%;
+ }
+ .images {
+   width: 25%;
+   margin: 20px 20PX 20px 20px;
+   height: 60%;
+
+
+ }
